src/global.css
/* ... */
@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground;
  }
}

* {
  @apply [&_svg.lucide:not([class*='size-'])]:size-4
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-muted: var(--muted);
  --color-muted-foreground: var(--muted-foreground);
  --color-popover: var(--popover);
  --color-popover-foreground: var(--popover-foreground);
  --color-card: var(--card);
  --color-card-foreground: var(--card-foreground);
  --color-border: var(--border);
  --color-input: var(--input);
  --color-primary: var(--primary);
  --color-primary-foreground: var(--primary-foreground);
  --color-secondary: var(--secondary);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-accent: var(--accent);
  --color-accent-foreground: var(--accent-foreground);
  --color-destructive: var(--destructive);
  --color-destructive-foreground: var(--destructive-foreground);
  --color-menu: var(--menu);
  --color-menu-foreground: var(--menu-foreground);

  --color-ring: var(--ring);
  --color-radius: var(--radius);

  --color-chart-1: var(--chart-1);
  --color-chart-2: var(--chart-2);
  --color-chart-3: var(--chart-3);
  --color-chart-4: var(--chart-4);
  --color-chart-5: var(--chart-5);

  --color-reconnaissance: var(--reconnaissance);
  --color-reconnaissance-foreground: var(--reconnaissance-foreground);
  --color-weaponization: var(--weaponization);
  --color-weaponization-foreground: var(--weaponization-foreground);
  --color-delivery: var(--delivery);
  --color-delivery-foreground: var(--delivery-foreground);
  --color-exploitation: var(--exploitation);
  --color-exploitation-foreground: var(--exploitation-foreground);
  --color-installation: var(--installation);
  --color-installation-foreground: var(--installation-foreground);
  --color-command_and_control: var(--command_and_control);
  --color-command_and_control-foreground: var(--command_and_control-foreground);
  --color-actions_on_objectives: var(--actions_on_objectives);
  --color-actions_on_objectives-foreground: var(--actions_on_objectives-foreground);
  --color-pre-condition: var(--pre-condition);
  --color-pre-condition-foreground: var(--pre-condition-foreground);
  --color-beta: var(--beta);
  --color-beta-foreground: var(--beta-foreground);
  --color-informational: var(--informational);
  --color-relevant: var(--relevant);
  --color-untagged: var(--untagged);

  --color-doc: var(--doc);
  --color-doc-foreground: var(--doc-foreground);
  --color-dopv: var(--dopv);
  --color-dopv-foreground: var(--dopv-foreground);
  --color-doc-offender: var(--doc-offender);
  --color-doc-offender-foreground: var(--doc-offender-foreground);

  --color-syntax-1: var(--syntax-1);
  --color-syntax-2: var(--syntax-2);
  --color-syntax-3: var(--syntax-3);
  --color-syntax-4: var(--syntax-4);
  --color-syntax-5: var(--syntax-5);
  --color-sidebar-ring: var(--sidebar-ring);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-accent: var(--sidebar-accent);
  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
  --color-sidebar-primary: var(--sidebar-primary);
  --color-sidebar-foreground: var(--sidebar-foreground);
  --color-sidebar: var(--sidebar);
  --color-sidebar-icon: var(--sidebar-icon);
}

